kubedeploys/green-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    release: '${parameters.green_release}'
  name: 'nginx-deployment-${parameters.green_release}'
spec:
  minReadySeconds: 5
  selector:
    matchLabels:
      app: nginx
      release: '${parameters.green_release}'
  template:
    metadata:
      labels:
        app: nginx
        release: '${parameters.green_release}'
    spec:
      containers:
        - image: 'quay.io/opsmxpublic/simple-webapp:v2'
          name: webapp-green
          ports:
            - containerPort: 8080
