kubedeploys/jira-deploy.yml
apiVersion: v1
kind: Service
metadata:
  name: opsmx-svc-prod
spec:
  ports:
    - name: canary
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: opsmx-kube-deploys
  type: LoadBalancer
