kubedeploys/blue-ingress-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    release: '${parameters.release}'
  name: 'nginx-deployment-${parameters.release}'
spec:
  minReadySeconds: 5
  selector:
    matchLabels:
      app: nginx
      release: '${parameters.release}'
  template:
    metadata:
      labels:
        app: nginx
        release: '${parameters.release}'
    spec:
      containers:
        - image: 'nginx:1.7.9'
          name: nginx
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    release: '${parameters.release}'
  name: '${parameters.service_name}-${parameters.release}'
  namespace: default
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx
    release: '${parameters.release}'
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: nginx
    release: '${parameters.release}'
  name: 'nginx-ingress-${parameters.release}'
spec:
  rules:
    - host: app.domain.com
      http:
        paths:
          - backend:
              serviceName: '${parameters.service_name}-${parameters.release}'
              servicePort: 80
